added music and fix bugs

--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
   </div>
 
   <audio id="music" loop>
-    <source src="tu-hai-toh-mujhe.mp3" type="audio/mpeg">
+    <source src="assets/tu_chahiye.mp3" type="audio/mpeg">
   </audio>
 
   <main class="card">
 
     <h1 id="name">Janudo 🖤</h1>
 
-    <!-- secret mobile message -->
     <div id="secret" class="hidden">
       tu khabar pan nathi ke hu ketlo pyaar karu chu 🖤
     </div>
@@ -33,11 +32,10 @@
     </div>
 
     <p id="text" class="typewriter">
-      Janudo mari vaat sambhad ne…
     </p>
 
     <div class="buttons">
-      <button id="yes">Hmm 💖</button>
+      <button id="yes">Hmm YES 💖</button>
       <button id="no">Naa 😏</button>
     </div>
 
